# automated-circuit-design

./: .gitignore  README.md  cabal.project  coursework2.cabal  hie.yaml
src/: CommonTypes.hs  Dags.hs  Exps.hs  Latex.hs  Specs.hs  main.hs
writeup/: main.tex
