cabal-version:      2.4
name:               coursework2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mateusz Lichota
maintainer:         mateusz@lichota.net

executable coursework2
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Dags, Specs, Exps, CommonTypes, Latex

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      vector,
                      vector-algorithms,
                      aeson,
                      text-replace,
                      text,
                      bytestring

    hs-source-dirs:   src
    default-language: Haskell2010
